--- a/src/app/core/home/home.component.html
+++ b/src/app/core/home/home.component.html
@@ -1,65 +1,164 @@
-
-  <!-- Slider main container -->
-  <div class="swiper-container">
-    <!-- Additional required wrapper -->
-    <div class="swiper-wrapper">
-      <!-- Slides -->
-      <div class="swiper-slide">
-        <p>Slide one</p>
-        <img src='http://pre15.deviantart.net/b938/th/pre/f/2013/153/2/2/macro_galaxy_by_zy0rg-d67ifmz.png' />
-      </div>
-      <div class="swiper-slide">
-        <p>Slide two</p>
-        <img src='http://img10.deviantart.net/9129/i/2012/267/3/4/rain_of_lights_by_saretta1-d5eo0j1.png' />
-      </div>
-      <div class="swiper-slide">
-        <p>Slide three</p>
-        <img src='http://pre11.deviantart.net/6b60/th/pre/f/2012/243/3/7/37cdb8c0966aa1d9f5d9c1f308de7a32-d5d2be8.png' />
-      </div>
-      <div class="swiper-slide">
-        <p>Slide four</p>
-        <img src='http://orig08.deviantart.net/e53b/f/2012/136/c/8/fly_by_lucid_light-d4p5awv.jpg' />
-      </div>
+<div class="swiper-container">
+  <div class="swiper-wrapper">
+    <div class="swiper-slide">
+      <img src='http://pre15.deviantart.net/b938/th/pre/f/2013/153/2/2/macro_galaxy_by_zy0rg-d67ifmz.png' />
     </div>
-    <!-- If we need pagination -->
-    <div class="swiper-pagination"></div>
-
+    <div class="swiper-slide">
+      <img src='http://img10.deviantart.net/9129/i/2012/267/3/4/rain_of_lights_by_saretta1-d5eo0j1.png' />
+    </div>
+    <div class="swiper-slide">
+      <img src='http://pre11.deviantart.net/6b60/th/pre/f/2012/243/3/7/37cdb8c0966aa1d9f5d9c1f308de7a32-d5d2be8.png' />
+    </div>
+    <div class="swiper-slide">
+      <img src='http://orig08.deviantart.net/e53b/f/2012/136/c/8/fly_by_lucid_light-d4p5awv.jpg' />
+    </div>
   </div>
+  <div class="swiper-pagination"></div>
+
+</div>
 
 
 
-  <!-- about section start -->
+<!-- about section start -->
 <section></section>
 <div class="container">
-    <div class="row">
+  <div class="row">
 
+
+    <div class="containeres">
+      <div class="contentLeft">
+        <div class="row">
+          <div class="imgWrapper">
+            <img
+              src="https://images.unsplash.com/photo-1687579521048-217e24217d53?crop=entropy&cs=srgb&fm=jpg&ixid=M3wzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE2ODg5ODcxNzl8&ixlib=rb-4.0.3&q=85"
+              alt="">
+          </div>
+          <div class="imgWrapper">
+            <img
+              src="https://images.unsplash.com/photo-1686580546412-80e80519abd7?crop=entropy&cs=srgb&fm=jpg&ixid=M3wzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE2ODg5ODcyMDN8&ixlib=rb-4.0.3&q=85"
+              alt="">
+          </div>
+          <div class="imgWrapper">
+            <img
+              src="https://images.unsplash.com/photo-1688133338995-a394ce7314e4?crop=entropy&cs=srgb&fm=jpg&ixid=M3wzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE2ODg5ODcyMDN8&ixlib=rb-4.0.3&q=85"
+              alt="">
+          </div>
+          <div class="imgWrapper">
+            <img
+              src="https://images.unsplash.com/photo-1686354715732-7e4685269a25?crop=entropy&cs=srgb&fm=jpg&ixid=M3wzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE2ODg5ODcyNzN8&ixlib=rb-4.0.3&q=85"
+              alt="">
+          </div>
+        </div>
+      </div>
+      <div class="contentRight">
+        <div class="content">
+          <h4>Welcome To</h4>
+          <h2>About Us Title...</h2>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ex ullam saepe, totam dicta fuga provident. Fuga,
+            labore porro? Dolorem unde, explicabo atque voluptatum laborum harum, quas velit voluptates sit rerum non
+            ullam laboriosam iusto ad sequi hic soluta consequatur quaerat!</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- about section End -->
+
+
+<!-- customer details start -->
+
+<div class="container">
+  <div class="row">
+    <div class="col-lg-12">
+      <div class="stats-container">
+        <div class="stat">
+          <div class="subscribers-odometer odometer plus">0</div>
+          <div class="type">Events Done</div>
+        </div>
+        <div class="stat">
+          <div class="videos-odometer odometer plus">0</div>
+          <div class="type">Workers</div>
+        </div>
+        <div class="stat">
+          <div class="projects-odometer odometer">0</div>
+          <div class="type">Years</div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- customer details End -->
+
+
+<!-- upComing event Start -->
+
+
+<div class="container mb-5">
+  <div class="row">
+    <div class="col-lg-6">
+
+    </div>
+
+    <div class="col-lg-6">
+      <div class="upcom">
+        <p>UpComing Event</p>
+      </div>
+      <div class="up_tit">
+        <p>Welcome Greatest Digital
+          Conference</p>
+      </div>
+      <div class="up_sup">
+        <p>United nations or the world health organization, where they undertake specific mandates to address global
+          challenges the and responsibilities the authority delegated to it...</p>
+      </div>
+      <div class="timeres">
+        <div class="time_box">
+          <div class="up">
+            <p>{{days}}</p>
+          </div>
+          <div class="dow">
+            <p>days</p>
+          </div>
+        </div>
+
+        <div class="time_box timer_secound">
+          <div class="up">
+            <p>{{hours}}</p>
+          </div>
+          <div class="dow">
+            <p>hours</p>
+          </div>
+        </div>
+
+        <div class="time_box">
+          <div class="up">
+            <p>{{minutes}}</p>
+          </div>
+          <div class="dow">
+            <p>min</p>
+          </div>
+        </div>
   
-  <div class="containeres">
-  <div class="contentLeft">
-    <div class="row">
-        <div class="imgWrapper">
-            <img src="https://images.unsplash.com/photo-1687579521048-217e24217d53?crop=entropy&cs=srgb&fm=jpg&ixid=M3wzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE2ODg5ODcxNzl8&ixlib=rb-4.0.3&q=85" alt="">
+        <div class="time_box timer_secound">
+          <div class="up">
+            <p>{{seconds}}</p>
+          </div>
+          <div class="dow">
+            <p>sec</p>
+          </div>
         </div>
-        <div class="imgWrapper">
-            <img src="https://images.unsplash.com/photo-1686580546412-80e80519abd7?crop=entropy&cs=srgb&fm=jpg&ixid=M3wzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE2ODg5ODcyMDN8&ixlib=rb-4.0.3&q=85" alt="">
-        </div>
-        <div class="imgWrapper">
-            <img src="https://images.unsplash.com/photo-1688133338995-a394ce7314e4?crop=entropy&cs=srgb&fm=jpg&ixid=M3wzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE2ODg5ODcyMDN8&ixlib=rb-4.0.3&q=85" alt="">
-        </div>
-        <div class="imgWrapper">
-            <img src="https://images.unsplash.com/photo-1686354715732-7e4685269a25?crop=entropy&cs=srgb&fm=jpg&ixid=M3wzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE2ODg5ODcyNzN8&ixlib=rb-4.0.3&q=85" alt="">
-        </div>
+
+      </div>
+
+      
+
+
+
+
     </div>
-  </div>
-  <div class="contentRight">
-    <div class="content">
-      <h4>Welcome To</h4>
-      <h2>About Us Title...</h2>
-      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ex ullam saepe, totam dicta fuga provident. Fuga, labore porro? Dolorem unde, explicabo atque voluptatum laborum harum, quas velit voluptates sit rerum non ullam laboriosam iusto ad sequi hic soluta consequatur quaerat!</p>
-    </div>
-  </div>
-</div>
   </div>
 </div>
 
-  <!-- about section End -->
+<!-- upComing event End -->
