--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,4 +1,4 @@
-<section class="top_header">
+<!-- <section class="top_header">
     <div class="container">
         <div class="row">
             <div class="col-lg-6">
@@ -17,13 +17,13 @@
 </div>
         </div>
     </div>
-</section>
-
+</section> -->
+<div class="naves">
 <section class="nav_bar">
     <div class="container">
-        <div class="row">
-            <div class="col-lg-2"><p>Logo</p></div>
-            <div class="col-lg-10">
+        <div class="row d-flex align-items-center justify-content-center">
+            <div class="col-lg-2 d-flex align-items-center justify-content-center"><img src="assets/images/logo.png" class="img-fluid"></div>
+            <div class="col-lg-8 d-flex align-items-center justify-content-center">
                 <div class="navigator">
                     <p>Home</p>
                     <p>About</p>
@@ -32,6 +32,14 @@
                     <p>Contact Us</p>
                 </div>
             </div>
+
+            <div class="col-lg-2">
+                <div class="call_button">
+                    
+                    <p> <i class="ri-phone-fill" style="padding-right: 10px;"></i>+92-09-36789-09</p>
+                </div>
+            </div>
         </div>
     </div>
 </section>
+</div>
