--- a/src/app/core/header/header.component.css
+++ b/src/app/core/header/header.component.css
@@ -1,56 +1,88 @@
-p{
+p {
     margin: 0px;
 }
-.navigator{
+
+.navigator {
     display: flex;
     align-items: center;
-    justify-content: end;
+    justify-content: start;
     gap: 80px;
 }
 
-.top_header{
+.top_header {
     padding: 0px 0px;
     background-color: #ff3639;
 }
 
-.social{
+.social {
     display: flex;
     align-items: center;
     justify-content: end;
     gap: 40px;
 }
 
-.social i{
+.social i {
     color: white;
     font-size: 20px;
     cursor: pointer;
 }
 
-.location{
+.location {
     display: flex;
     align-items: center;
     justify-content: start;
     gap: 10px;
 }
 
-.location p{
+.location p {
     margin: 0px;
     font-size: 12px;
     color: white;
 }
 
-.location i{
+.location i {
     color: white;
 }
 
-.nav_bar{
+.nav_bar {
     padding: 10px 0px;
 }
 
-.navigator p{
+.navigator p {
+    cursor: pointer;
+    color: white;
+}
+
+.navigator p:hover {
+    color: #ff3639;
+}
+
+.naves {
+    position: absolute;
+    z-index: 999;
+    width: 100%;
+}
+
+.nav_bar img {
+    width: 100px;
+}
+
+.call_button p {
+    background: linear-gradient(0deg, rgba(183, 38, 255, 1) 0%, rgba(62, 14, 84, 1) 100%);
+    text-align: center;
+    border-radius: 20px;
+    color: white;
+    padding: 5px 15px;
+    border: 2px solid #ffffff;
     cursor: pointer;
 }
 
-.navigator p:hover{
-    color: #ff3639;
+.call_button p:hover {
+    background: linear-gradient(0deg, rgba(62, 14, 84, 1) 0%, rgba(183, 38, 255, 1) 100%, );
+}
+
+.call_button {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
