--- a/src/app/core/home/home.component.css
+++ b/src/app/core/home/home.component.css
@@ -177,8 +177,8 @@
     font-size: 20px;
     color: #571e5f;
     margin-top: 10px;
-      font-family: "Barlow", sans-serif;
-      font-weight: 500;
+    font-family: "Barlow", sans-serif;
+    font-weight: 500;
 }
 
 .odometer.plus {
@@ -224,7 +224,7 @@
 
 /* upcomming comming events End */
 
-.upcomming{
+.upcomming {
     margin-top: 90px;
 }
 
@@ -313,7 +313,7 @@
     padding: 5px;
     border-radius: 10px;
     margin-bottom: 20px;
-    
+
 }
 
 .cardes img {
@@ -354,7 +354,13 @@
     gap: 2rem;
     justify-content: center;
     flex-wrap: wrap;
-    perspective: 1000px;
+    /* perspective: 1000px; */
+}
+
+.sectiones_price {
+    margin-top: 70px;
+    background-color: #fef0ff;
+    padding: 70px 0px 70px 0px;
 }
 
 .pricing-card {
@@ -427,7 +433,7 @@
     font-size: 1.75rem;
     font-weight: 600;
     margin-bottom: 0.5rem;
-    background: linear-gradient(90deg, #6784ff, #6784ff);
+    background: linear-gradient(90deg, rgba(183, 38, 255, 1) 0%, rgba(62, 14, 84, 1) 100%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
@@ -464,16 +470,16 @@
 
 .features li::before {
     content: "⚡";
-    color: #6784ff;
+    color: rgb(211, 124, 255);
     font-size: 0.9rem;
 }
 
 .cta-button {
-    width: 100%;
-    padding: 1.25rem;
+    /* width: 100%; */
+    padding: 1.05rem;
     border: none;
     border-radius: 16px;
-    background: linear-gradient(135deg, #6784ff, #4462ff);
+    background: linear-gradient(135deg, rgba(183, 38, 255, 1) 0%, rgba(62, 14, 84, 1) 100%);
     color: white;
     font-weight: 600;
     font-size: 1.1rem;
@@ -512,7 +518,7 @@
     position: absolute;
     top: 1rem;
     right: -4rem;
-    background: linear-gradient(135deg, #6784ff, #4462ff);
+    background: linear-gradient(120deg, rgba(183, 38, 255, 1) 0%, rgb(109, 28, 146) 100%);
     color: white;
     padding: 0.5rem 4rem;
     transform: rotate(45deg);
@@ -527,6 +533,7 @@
     backdrop-filter: blur(20px);
     -webkit-backdrop-filter: blur(20px);
     z-index: -1;
+    background-color: #ffffff;
 }
 
 @keyframes float {
@@ -649,7 +656,7 @@ wrap {
     }
 }
 
-.carousel > li {
+.carousel>li {
     width: 500px;
     height: 325px;
     background: #fff;
@@ -659,14 +666,14 @@ wrap {
 
 /* SM */
 @media (min-width: 768px) and (max-width: 991px) {
-    .carousel > li {
+    .carousel>li {
         width: 400px;
     }
 }
 
 /* XS */
 @media (max-width: 767px) {
-    .carousel > li {
+    .carousel>li {
         width: 350px;
         height: 345px;
     }
@@ -674,7 +681,7 @@ wrap {
 
 /* XXS */
 @media (max-width: 480px) {
-    .carousel > li {
+    .carousel>li {
         width: 240px;
         height: 408px;
     }
@@ -834,6 +841,7 @@ wrap {
         display: none;
     }
 }
+
 /* testimonial end */
 
 
@@ -841,100 +849,104 @@ wrap {
 
 
 .slider-container {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	overflow: hidden;
-	position: relative;
-	height: 100vh;
-	width: 100vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+    position: relative;
+    height: 100vh;
+    width: 100vw;
 }
 
 .slider_tet h1 {
-	color: #fff !important;
-	font-size: 50px;
-	letter-spacing: 5px;
-	
+    color: #fff !important;
+    font-size: 50px;
+    letter-spacing: 5px;
+
     line-height: 70px !important;
-   font-family: "Barlow", sans-serif;
-    
+    font-family: "Barlow", sans-serif;
+
 }
 
-.slider_tet{
-position: absolute;
-left: 120px;
-	z-index: 100;
+.slider_tet {
+    position: absolute;
+    left: 120px;
+    z-index: 100;
 
 }
 
 .slider-container::after {
-	background-color: #000;
-	content: '';
-	position: absolute;
-	opacity: 0.3;
-	top: 0;
-	left: 0;
-	height: 100%;
-	width: 100%;
-	z-index: 1;
+    background-color: #000;
+    content: '';
+    position: absolute;
+    opacity: 0.3;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    z-index: 1;
 }
 
 .slide {
-	background-size: cover;
-	background-repeat: no-repeat;
-	background-position: center center;
-	position: absolute;
-	top: 0;
-	left: 0;
-	opacity: 0;
-	height: 100%;
-	width: 100%;
-	transform: scale(1.15);
-	transition: opacity .6s ease;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 0;
+    height: 100%;
+    width: 100%;
+    transform: scale(1.15);
+    transition: opacity .6s ease;
 }
 
 .slide.active {
-	animation: grow 4s linear forwards;
-	opacity: 1;
+    animation: grow 4s linear forwards;
+    opacity: 1;
 }
 
 @keyframes grow {
-	0%, 20% {
-		transform: scale(1);
-	}
-	
-	75%, 100% {
-		transform: scale(1.15);
-	}
+
+    0%,
+    20% {
+        transform: scale(1);
+    }
+
+    75%,
+    100% {
+        transform: scale(1.15);
+    }
 }
 
 .controls-container {
-	position: absolute;
-	top: 50%;
-	right: 10px;
-	display: flex;
-	flex-direction: column;
-	transform: translateY(-50%);
-	z-index: 2;
+    position: absolute;
+    top: 50%;
+    right: 10px;
+    display: flex;
+    flex-direction: column;
+    transform: translateY(-50%);
+    z-index: 2;
 }
 
 .control {
-	background-color: #fff;
-	cursor: pointer;
-	opacity: 0.5;
-	margin: 6px;
-	height: 40px;
-	width: 5px;
-	transition: opacity 0.3s, background-color 0.3s, transform 0.3s;
+    background-color: #fff;
+    cursor: pointer;
+    opacity: 0.5;
+    margin: 6px;
+    height: 40px;
+    width: 5px;
+    transition: opacity 0.3s, background-color 0.3s, transform 0.3s;
 }
 
-.control.active, .control:hover {
-	background-color: #fff;
-	opacity: 1;
-	transform: scale(1.2);
+.control.active,
+.control:hover {
+    background-color: #fff;
+    opacity: 1;
+    transform: scale(1.2);
 }
 
-.overes{
+.overes {
     position: absolute;
     width: 100%;
     height: 100vh;
@@ -942,7 +954,7 @@ left: 120px;
     z-index: 99;
 }
 
-.slider-container{
+.slider-container {
     position: relative;
 }
 
@@ -951,86 +963,110 @@ left: 120px;
 
 
 
-body, p, span{
-  font-family: 'Roboto', sans-serif;
-}
-h1,h2,h3,h4,h5,h6,a{
-  font-family: 'Rubik', sans-serif;
+body,
+p,
+span {
+    font-family: 'Roboto', sans-serif;
 }
 
-.finix-text h6{
-  color: #e73c3e;
-  font-weight: 400;
-  font-size: 17px;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+a {
+    font-family: 'Rubik', sans-serif;
 }
+
+.finix-text h6 {
+    color: #e73c3e;
+    font-weight: 400;
+    font-size: 17px;
+}
+
 .finix-text h2 {
-  font-weight: 400;
-  font-size: 35px;
-  margin-top: 20px;
-  margin-bottom: 20px;
+    font-weight: 400;
+    font-size: 35px;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
+
 .finix-text p {
-  color: #606060;
-  font-size: 15px;
-  line-height: 1.8rem;
+    color: #606060;
+    font-size: 15px;
+    line-height: 1.8rem;
 }
+
 .why-choose-us {
-  margin-top: 90px;
+    margin-top: 90px;
 }
+
 .why-choose-us .finix-text h2 {
-  font-weight: 500;
+    font-weight: 500;
 }
 
-.why-choose-us .ct-btn a{
-  color: #e73c3e;
+.why-choose-us .ct-btn a {
+    color: #e73c3e;
 }
+
 .why-choose-us .feature-box {
-  background: #fff;
-  padding: 30px;
-  margin-bottom: 30px;
-  position: relative;
-  overflow: hidden;
+    background: #fff;
+    padding: 30px;
+    margin-bottom: 30px;
+    position: relative;
+    overflow: hidden;
 
-  transition: .4s;
+    transition: .4s;
 }
+
 .why-choose-us .feature-box:hover {
-  transform: translateY(-10px);
-}
-.why-choose-us .feature-box:hover .fbc-btn{
-  background: #e73c3e;
-  color: #fff;
-}
-.why-choose-us .feature-box::before {
-  content: "";
-  position: absolute;
-  top: -115px;
-  left: 0;
-  right: 0;
-  margin: auto;
-  width: 90%;
-  height: 70%;
-  background: #fdebeb;
-  border-radius: 50%;
-}
-.why-choose-us .fbc-btn {
-  display: inline-block;
-  height: 90px;
-  width: 90px;
-  line-height: 90px;
-  background: #fff;
-  border-radius: 50%;
-  text-align: center;
-  color: #e73a3e;
-  position: relative;
-  transition: .4s;
-}
-.active-feature{
-  margin-top: -30px;
-}
-.why-choose-us .finix-text{
-  position: relative;
+    transform: translateY(-10px);
 }
 
-.catagery{
+.why-choose-us .feature-box:hover .fbc-btn {
+    background: #e73c3e;
+    color: #fff;
+}
+
+.why-choose-us .feature-box::before {
+    content: "";
+    position: absolute;
+    top: -115px;
+    left: 0;
+    right: 0;
+    margin: auto;
+    width: 90%;
+    height: 70%;
+    background: #fdebeb;
+    border-radius: 50%;
+}
+
+.why-choose-us .fbc-btn {
+    display: inline-block;
+    height: 90px;
+    width: 90px;
+    line-height: 90px;
+    background: #fff;
+    border-radius: 50%;
+    text-align: center;
+    color: #e73a3e;
+    position: relative;
+    transition: .4s;
+}
+
+.active-feature {
+    margin-top: -30px;
+}
+
+.why-choose-us .finix-text {
+    position: relative;
+}
+
+.catagery {
     margin-top: 30px;
+}
+
+.banes img {
+    border-radius: 20px;
 }
